vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    tailscale.com/tags: '["tag:k8s"]'
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: vaultwarden
      port:
        number: 80
